objects/GEMS_Eligibility_Testing__c.object
<CustomObject>
    <fields>
        <fullName>Eligibility_AEP_File_Details__c</fullName>
        <label>Eligibility AEP File Details</label>
        <referenceTo>GEMS_Eligibility_AEP_File_Details__c</referenceTo>
        <relationshipLabel>Eligibility Testing</relationshipLabel>
        <relationshipName>Eligibility_Testing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>File_to_IT__c</fullName>
        <label>File to IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <label>Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Res_from_IT__c</fullName>
        <label>Res from IT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Res_to_Client__c</fullName>
        <label>Res to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_File_Number__c</fullName>
        <label>Test File Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Accept__c</fullName>
        <label>Total Accept</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reject__c</fullName>
        <label>Total Reject</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Eligibility Testing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TF-{0000}</displayFormat>
        <label>Reference#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Testing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>